# inverted-index-builder

./: README.md  pyproject.toml
samples/tiny_example/: documents.jsonl
src/inverted_index_builder/: __init__.py  __main__.py  models.py  pipeline.py  protocols.py  serialization.py  tokenizer.py
tests/: test_cli.py  test_models.py  test_pipeline.py  test_serialization.py  test_tokenizer.py
