[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inverted-index-builder"
version = "0.1.0"
description = "An inverted index builder implementing tokenization, positional postings, and document frequency from scratch."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Juan Martos Cuevas", email = "martoscuevasjuan@gmail.com" }]
dependencies = []

[project.scripts]
inverted-index-builder = "inverted_index_builder.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "mypy>=1.10,<2",
    "ruff>=0.5,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/inverted_index_builder"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
